k8s/postgres-workouts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-workouts
  namespace: fittrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-workouts
  template:
    metadata:
      labels:
        app: postgres-workouts
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-workouts-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-workouts-storage
          persistentVolumeClaim:
            claimName: postgres-workouts-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-workouts
  namespace: fittrack
spec:
  selector:
    app: postgres-workouts
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
