k8s/workout-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout-service
  namespace: fittrack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workout-service
  template:
    metadata:
      labels:
        app: workout-service
    spec:
      containers:
        - name: workout-service
          image: fittrack/workout-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: workout-service
  namespace: fittrack
spec:
  selector:
    app: workout-service
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
  type: NodePort
